fix(sass/termynal): allow preceding whitespace for spans

--- a/assets/sass/_termynal.scss
+++ b/assets/sass/_termynal.scss
@@ -54,6 +54,7 @@ $color-text-subtle: $alt-text-color;
     display: block;
     line-height: 2;
     color: $color-text;
+    white-space: pre;
 }
 
 [data-ty]:before {
